[package]
name = "ivanti_lilo_extract_aes_key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = "1.21.0"
goblin = "0.8.0"
clap = { version = "4.5.1", features = ["derive"] }
patternscanner = "0.5.0"
